Fix double border issue on abbreveations

--- a/byceps/blueprints/core/static/style/common.css
+++ b/byceps/blueprints/core/static/style/common.css
@@ -69,8 +69,9 @@ textarea {
 }
 
 abbr {
-  border-bottom: solid 1px;
+  border-bottom: none;
   cursor: help;
+  text-decoration: underline dotted;
 }
 
 address {
